# dynamic-load-version

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
interface/: CMakeLists.txt  interface.hpp
lib/: CMakeLists.txt
lib/DLLoader/: DLLoader.h
lib/Windows/: DLLoader.h
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cmake  main.cpp  path.h.in
src/protocol_v1/: CMakeLists.txt  protocol_v1.cpp  protocol_v1.hpp
src/protocol_v2/: CMakeLists.txt  protocol_v2.cpp  protocol_v2.hpp
